--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,8 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffff;
   background-color: #0F1A20;
 }
 
@@ -27,4 +23,9 @@ body {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #555;
+}
+
+#app,
+body {
+  overflow-x: hidden;
 }
