--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,14 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  color: #ffffff;
-  background-color: #0F1A20;
+	font-family: 'Roboto', sans-serif;
+	color: #FFFFFF;
+	line-height: 1.6;
+	background-color: #0F1A20;
 }
 
 ::-webkit-scrollbar-track
